--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">PostsApp</string>
+    <string name="text_header">User posts</string>
+    <string name="item_user_id">UserId %d</string>
+    <string name="text_with_warning">With Warning</string>
+    <string name="title_banned_post">Тут міг бути пост юзера %d, але він забанений</string>
+    <string name="error_loading">Error loading data</string>
 </resources>
