--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,11 @@
     <string name="item_user_id">UserId %d</string>
     <string name="text_with_warning">With Warning</string>
     <string name="title_banned_post">There could be a user post% d, but it is banned</string>
-    <string name="error_loading">Error loading data</string>
+
+    <string name="btn_title_create">Create</string>
+    <string name="btn_title_cancel">Cancel</string>
+
+    <string name="toast_error_loading">Error loading data</string>
+    <string name="toast_data_refreshed">Data refreshed</string>
+    <string name="toast_error_refreshing">Error refreshing data</string>
 </resources>
